Add endpoint for drug level
